Fixed nav alignment
...now on to hide the logo on homepage and nav background color/opacity

--- a/css/main-header-test.css
+++ b/css/main-header-test.css
@@ -171,17 +171,9 @@ header {
     background-size: auto;
     margin: 0 auto;
 }
-#nav-bar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-    align-items: flex-start;
-    background-color: #ffffff;
-}
 
-nav {
-  float: left;
+.menu {
+  width: 10%;
 }
 
 nav ul {
@@ -198,7 +190,7 @@ nav ul li{
 nav ul li a {
     display: block;
     text-align: center;
-    padding: 14px 16px;
+    padding: 6px 16px;
     text-transform: uppercase;
     text-decoration: none;
     font-size: 16px;
@@ -213,7 +205,7 @@ header h3 {
   color: #3a1772;
 }
 
-header h3 a {
+header  a {
   text-transform: uppercase;
   text-decoration: none;
   font-size: 14px;
@@ -224,18 +216,22 @@ header h3 a {
 
 .language {
   color: #3d3d3d;
-  font-size: 12;
   font-weight: 600;
-  padding-left: 20px;
+  float: right;
+  margin: 3px 0 0 0;
+  padding: 0 10px 0 0;
+}
+
+.language a {
+  color: #3D3D3D;
 }
 
 .logo {
   font-family: "Monoton", sans-serif;
   color: #3a1772;
-  font-size: 25px;
   font-weight: lighter;
-  padding-left: 20px;
   text-align: center;
+  display: inline;
 }
 
 header img {
@@ -528,21 +524,20 @@ p #imprint {
    header img {
      width: 30%;
    }
+   .menu {
+    width: 6%;
+}
  }
 
  /* Medium devices (landscape tablets, 768px and below) */
  @media only screen and (max-width: 768px) {
-   .two-third-width {
-     display: block;
-     float: none;
-     height: 40px;
-     width: 100%;
-     background: url(../img/burger-icon.png) no-repeat 98% center;
-   }
 
-   nav {
-      width: 100%;
-      float: center;
+
+   .menu {
+     display: block;
+     float: left;
+    height: 40px;
+     background: url(../img/burger-icon.png) no-repeat 98% center;
    }
 
    nav ul {
@@ -553,6 +548,7 @@ p #imprint {
 
    nav ul.open {
      height: auto;
+     clear:both;
    }
 
    nav ul li {
@@ -579,6 +575,25 @@ p #imprint {
      padding: 40px 100px;
      p;
   }
+
+  nav {
+    padding: 0 10px;
+  }
+
+  nav ul {
+    float: right;
+  }
+
+  .logo {
+    float: left;
+    padding: 7px 0;
+
+  }
+
+  .language {
+    float: right;
+  }
+
  }
 
  /* Large devices (laptops/desktops, 992px and up) */
